--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div class="logo">Thinkfulbnb</div>
       <nav>
         <ul id="menu">
-          <li><a href="#stay">Stay</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#ideas">Ideas</a></li>
-          <li><a href="#host">Host</a></li>
+          <li class="item"><a href="#stay">Stay</a></li>
+          <li class="item"><a href="#about">About</a></li>
+          <li class="item"><a href="#ideas">Ideas</a></li>
+          <li class="item"><a href="#host">Host</a></li>
         </ul>
       </nav>
     </header>
@@ -35,99 +35,122 @@
       <section id="stay">
         <h2>Find the perfect vacation rental</h2>
         <!-- Create a form here -->
-        <form>
-          <div class="group">
+        <form class="menu">
+          <div class="menuItem">
             <label for="location">Location</label>
             <input
               type="text"
               id="location"
               name="location"
+              required
               placeholder="Search destination"
+              size="1"
             />
           </div>
-          <div class="group">
-            <label for="arive">Arive</label>
-            <input type="date" id="arive" name="arive" />
+          <div class="menuItem">
+            <label for="arrivalDate">Arrive</label>
+            <input
+              type="date"
+              id="trip-start"
+              name="arrivalDate"
+              value="01-01-2000"
+              min="01-01-2000"
+              max="12-31-3000"
+              size=".5"
+            />
           </div>
-          <div class="group">
-            <label for="depart">Depart</label>
-            <input type="date" id="depart" name="depart" />
+          <div class="menuItem">
+            <label for="departureDate">Depart</label>
+            <input
+              type="date"
+              id="trip-end"
+              name="departureDate"
+              value="01-01-2000"
+              min="01-01-2000"
+              max="12-31-3000"
+              size=".5"
+            />
           </div>
-          <div class="group">
-            <label for="type">Type</label>
-            <select name="type" id="type" size="1">
+          <div class="menuItem">
+            <label for="rentalType">Type</label>
+            <select name="rentalType" id="type" size="1">
               <option value="apartment">Apartment</option>
               <option value="barn">Barn</option>
               <option value="castle">Castle</option>
               <option value="houseboat">Houseboat</option>
-              <option value="tinyhouse">Tiny House</option>
+              <option value="tiny-house">Tiny House</option>
               <option value="yacht">Yacht</option>
               <option value="yurt">Yurt</option>
             </select>
           </div>
-          <button>Search</button>
+          <button type="submit">Search</button>
         </form>
       </section>
 
       <!-- About -->
       <section id="about" class="alternate-background">
         <h2>About</h2>
-        <div class="group2">
-          <div class="item">
-            <img
-              src="images/vacation-rental-pool.png"
-              alt="Thinkfulbnb - Vacation rental pool"
-            />
-          </div>
-          <div class="item">
-            <img
-              src="images/vacation-rental-inside-stone.png"
-              alt="Thinkfulbnb - Vacation rental inside stone"
-            />
-          </div>
-          <div class="item item-double">
-            <p>
-              Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
-              fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
-              porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
-              neque, at tempus lorem. Aenean mi magna, posuere at quam sed,
-              euismod gravida neque.
-            </p>
-          </div>
+        <div class="group">
+          <img
+            src="images/vacation-rental-pool.png"
+            alt="Thinkfulbnb - Vacation rental pool"
+          />
+
+          <img
+            src="images/vacation-rental-inside-stone.png"
+            alt="Thinkfulbnb - Vacation rental inside stone"
+          />
+
+          <p>
+            Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
+            fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
+            porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
+            neque, at tempus lorem. Aenean mi magna, posuere at quam sed,
+            euismod gravida neque.
+          </p>
         </div>
       </section>
 
       <!-- Ideas -->
       <section id="ideas">
         <h2>Ideas</h2>
-        <div class="group2">
-          <div class="item">
-            <h3>Forest retreats</h3>
-            <img
-              src="images/forest-retreat.png"
-              alt="Thinkfulbnb - Forest retreat"
-            />
-
-            <h3>Beaches</h3>
-            <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+        <div class="group">
+          <div class="menu">
+            <div class="forest">
+              <h3>Forest retreats</h3>
+              <img
+                src="images/forest-retreat.png"
+                alt="Thinkfulbnb - Forest retreat"
+              />
+            </div>
+            <div>
+              <h3>Beaches</h3>
+              <img
+                src="images/beach-house.png"
+                alt="Thinkfulbnb - Beach house"
+              />
+            </div>
           </div>
-          <div class="item">
-            <h3>Rustic cabins</h3>
-            <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
-
-            <h3>Pet-friendly</h3>
-            <img
-              src="images/pet-friendly.png"
-              alt="Thinkfulbnb - Pet-friendly"
-            />
+          <div class="menu">
+            <div class="rustic">
+              <h3>Rustic cabins</h3>
+              <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+            </div>
+            <div>
+              <h3>Pet-friendly</h3>
+              <img
+                src="images/pet-friendly.png"
+                alt="Thinkfulbnb - Pet-friendly"
+              />
+            </div>
           </div>
         </div>
       </section>
 
       <!-- Host -->
       <section id="host" class="alternate-background">
-        <div class="group2">
-          <div class="item">
+        <div class="group">
+          <div>
             <h2>Want to Become a Thinkfulbnb Host?</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
@@ -149,12 +172,10 @@
               </li>
             </ul>
           </div>
-          <div class="item">
-            <img
-              src="images/become-a-host.png"
-              alt="Thinkfulbnb - Become a host"
-            />
-          </div>
+          <img
+            src="images/become-a-host.png"
+            alt="Thinkfulbnb - Become a host"
+          />
         </div>
       </section>
     </main>
